# wasm-oauth-filter

./: .gitignore  BUILD  Cargo.toml  Makefile  README.md  envoy-bootstrap.yml  example.txt  runtime-config.json
.cargo/: config.toml
.github/workflows/: build-deploy.yml
doc/: authorization-code-flow-with-pkce.puml  filter.puml  filter_startup.puml  flow.puml  handle_request_state-diagram.puml  handle_token_response_state-diagram.puml  proxied-request.puml  state-diagram.puml  token-based-zta.puml  unauth-request.puml
perf-test/: README.md  oauth2_proxy_locust_test.py  requirements.txt  wasm_filter_locust_test.py
perf-test/external-auth/: docker-compose.yaml  envoy-bootstrap-static-loading.yaml  mock-auth2-config.json
perf-test/oauth2-proxy/: Dockerfile  docker-compose.yaml  envoy-bootstrap-static-loading.yaml
perf-test/wasm-filter/: docker-compose.yaml  envoy-bootstrap-static-loading.yaml  mock-auth2-config.json
src/: cache.rs  config.rs  discovery.rs  filter.rs  messages.rs  mock_overrides.rs  oaut_client_types.rs  oauth_client.rs  oauth_clientV2.rs  oauth_client_types.rs  oauth_client_v2.rs  oauth_service.rs  oauther.rs  session.rs  util.rs
src/oauth_client/: mod.rs  types.rs
test-env/: Dockerfile  docker-compose.yaml  envoy-bootstrap-static-loading.yaml  mock-auth2-config.json
