[package]
name = "authn_filter"
version = "0.1.0"
authors = ["Sondre"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/filter.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.14"
proxy-wasm = "0.1.3" # The Rust SDK for proxy-wasm
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2.1"
oauth2 = { version = "3.0",  default-features = false }
base64 = "0.13.0"
cookie = "0.15.0"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
getrandom = "0.2"

