[package]
name = "authn_filter"
version = "0.1.0"
authors = ["Sondre"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/filter.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.14"
proxy-wasm = "0.1.3" # The Rust SDK for proxy-wasm
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.2.1", features = ["serde"] }
oauth2 = { version = "3.0",  default-features = false }
jwt-simple = "0.9.4"
jsonwebkey = "0.3.2"

base64 = "0.13.0"
cookie = "0.15.0"
cfg-if = "1.0.0"
getrandom = "0.2"
time = "0.2.26"

[dev-dependencies]
rsa-der = "0.2.1"
jsonwebkey = { version = "0.3.2", features = ["pkcs-convert", "generate"]}

[package.metadata]
wasm-opt = false
